sdm660-common: Migrate to new dt2w node
Change-Id: Ib7f33e2463caffdf18c5590911fc593b139f160c

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -89,8 +89,8 @@ on boot
     mkdir /data/vendor/camera 0770 camera camera
 
 # DT2W
-    chown system system /proc/wake_node
-    chmod 0660 /proc/wake_node
+    chown system system /proc/tp_gesture
+    chmod 0660 /proc/tp_gesture
 
 #USB controller configuration
     setprop vendor.usb.rndis.func.name "rndis_bam"
